--- a/index.html
+++ b/index.html
@@ -12,8 +12,26 @@
 
 <body>
     <section class="hero">
-        <div class="navi">
-
+        <div class="container navi-container">
+            <a href="#" class="logo">Golden</a>
+            <ul class="navigation">
+                <i class="navi-hamburger fas fa-bars"></i>
+                <li class="navi-item">
+                    <a href="#">home</a>
+                </li>
+                <li class="navi-item">
+                    <a href="#">services</a>
+                </li>
+                <li class="navi-item">
+                    <a href="#">portfolio</a>
+                </li>
+                <li class="navi-item">
+                    <a href="#">about</a>
+                </li>
+                <li class="navi-item">
+                    <a href="#">contact</a>
+                </li>
+            </ul>
         </div>
         <div class="hero-inner">
             <div class="container">
