--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html lang="pl">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Montserrat:300i|Roboto&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <section class="hero">
         <div class="container navi-container">
@@ -53,91 +51,89 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <i class="services-icon fas fa-laptop-medical"></i>
-                    <h4 class=title-item ">Responsive Web</h4>
-                    <p class="description-item ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam dolore accusantium voluptatibus tenetur culpa.</p>
-
+                    <h4 class="title-item">Responsive Web</h4>
+                    <p class="description-item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam dolore accusantium voluptatibus tenetur culpa.</p>
                 </div>
-                <div class="col-12 col-md-4 ">
-                    <i class="services-icon fas fa-key "></i>
-                    <h4 class="title-item ">Web Security</h4>
-                    <p class="description-item ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam dolore accusantium voluptatibus tenetur culpa.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="our-portfolio ">
-        <div class="container ">
-            <h2 class="title ">OUR PORTFOLIO</h2>
-            <h3 class="subtitle ">Proin iaculis purus consequat sem cure.</h3>
-            <div class="row ">
-                <div class="col-12 col-md-6 col-lg-4 ">
-                    <div class="card ">
-                        <img class="img-our-portfolio " src="https://i.postimg.cc/6QQns4Lt/adult-beautiful-black-and-white-220417.jpg " alt=" ">
-                        <h4 class="title-item ">Ebony & Ivory</h4>
-                        <p class="description-item ">Breanding</p>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 ">
-                    <div class="card ">
-                        <img class="img-our-portfolio " src="https://i.postimg.cc/tJFVd3yt/adult-businesswoman-computer-374697.jpg " alt=" ">
-                        <h4 class="title-item ">Smart Stationary</h4>
-                        <p class="description-item ">Print Design</p>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 ">
-                    <div class="card ">
-                        <img class="img-our-portfolio " src="https://i.postimg.cc/BnmPCQWy/analogue-aperture-blur-416682.jpg " alt=" ">
-                        <h4 class="title-item ">Clever Poster</h4>
-                        <p class="description-item ">Print Design</p>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 ">
-                    <div class="card ">
-                        <img class="img-our-portfolio " src="https://i.postimg.cc/NM9XFhzn/bedding-camera-connection-916335.jpg " alt=" ">
-                        <h4 class="title-item ">Vinyl Record</h4>
-                        <p class="description-item ">Product Mock-Up</p>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 ">
-                    <div class="card ">
-                        <img class="img-our-portfolio " src="https://i.postimg.cc/FK2RPYTP/coffee-composition-container-942414.jpg " alt=" ">
-                        <h4 class="title-item ">Treehouse Template</h4>
-                        <p class="description-item ">Web design</p>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4 ">
-                    <div class="card ">
-                        <img class="img-our-portfolio " src="https://i.postimg.cc/htD7xQYT/desk-hand-laptop-374631.jpg " alt=" ">
-                        <h4 class="title-item ">Burned Logo</h4>
-                        <p class="description-item ">Breanding</p>
-                    </div>
+                <div class="col-12 col-md-4">
+                    <i class="services-icon fas fa-key"></i>
+                    <h4 class="title-item">Web Security</h4>
+                    <p class="description-item">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam dolore accusantium voluptatibus tenetur culpa.</p>
                 </div>
             </div>
         </div>
     </section>
-    <footer class="footer ">
-        <div class="container ">
-            <div class="row ">
-                <div class="footer-column col-12 col-md-6 col-lg-4 ">
-                    <p class="copyright "><i class="far fa-copyright "></i> Copyright 2014 FreebiesXpress.com</p>
+    <section class="our-portfolio">
+        <div class="container">
+            <h2 class="title">OUR PORTFOLIO</h2>
+            <h3 class="subtitle">Proin iaculis purus consequat sem cure.</h3>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img class="img-our-portfolio" src="https://i.postimg.cc/6QQns4Lt/adult-beautiful-black-and-white-220417.jpg" alt="zdjecie galerii">
+                        <h4 class="title-item">Ebony & Ivory</h4>
+                        <p class="description-item">Breanding</p>
+                    </div>
                 </div>
-                <div class="footer-column col-12 col-md-6 col-lg-8 ">
-                    <div class="wrap ">
-                    <i class="footer-icon fab fa-twitter "></i>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img class="img-our-portfolio" src="https://i.postimg.cc/tJFVd3yt/adult-businesswoman-computer-374697.jpg" alt="zdjecie galerii">
+                        <h4 class="title-item">Smart Stationary</h4>
+                        <p class="description-item">Print Design</p>
                     </div>
-                    <div class="wrap ">
-                    <i class="footer-icon fab fa-facebook-f "></i>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img class="img-our-portfolio" src="https://i.postimg.cc/BnmPCQWy/analogue-aperture-blur-416682.jpg" alt="zdjecie galerii">
+                        <h4 class="title-item">Clever Poster</h4>
+                        <p class="description-item">Print Design</p>
                     </div>
-                    <div class="wrap ">
-                    <i class="footer-icon fab fa-instagram "></i>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img class="img-our-portfolio" src="https://i.postimg.cc/NM9XFhzn/bedding-camera-connection-916335.jpg" alt="zdjecie galerii">
+                        <h4 class="title-item">Vinyl Record</h4>
+                        <p class="description-item">Product Mock-Up</p>
                     </div>
-                    <div class="wrap ">
-                    <i class="footer-icon fab fa-pinterest-p "></i>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img class="img-our-portfolio" src="https://i.postimg.cc/FK2RPYTP/coffee-composition-container-942414.jpg " alt="zdjecie galerii">
+                        <h4 class="title-item">Treehouse Template</h4>
+                        <p class="description-item">Web design</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card">
+                        <img class="img-our-portfolio" src="https://i.postimg.cc/htD7xQYT/desk-hand-laptop-374631.jpg " alt="zdjecie galerii">
+                        <h4 class="title-item">Burned Logo</h4>
+                        <p class="description-item">Breanding</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="containe">
+            <div class="row">
+                <div class="footer-column col-12 col-md-6 col-lg-4">
+                    <p class="copyright"><i class="far fa-copyright"></i> Copyright 2014 FreebiesXpress.com</p>
+                </div>
+                <div class="footer-column col-12 col-md-6 col-lg-8">
+                    <div class="wrap">
+                        <i class="footer-icon fab fa-twitter"></i>
+                    </div>
+                    <div class="wrap">
+                        <i class="footer-icon fab fa-facebook"></i>
+                    </div>
+                    <div class="wrap">
+                        <i class="footer-icon fab fa-instagram"></i>
+                    </div>
+                    <div class="wrap">
+                        <i class="footer-icon fab fa-pinterest"></i>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
 </body>
-
 </html>
